--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -7,8 +7,14 @@
     --primary-color: #ff3b5d;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 html {
     font-size: 62.5%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
