Build menu component

--- a/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/components/Layouts/DefaultLayout/DefaultLayout.module.scss
@@ -7,6 +7,7 @@
 .container {
     display: flex;
     width: var(--width-content);
+    padding: 0 var(--default-layout-horizontal-spacer);
 }
 
 .content {
