--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -2,14 +2,15 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
+    background-color: var(--white);
+    color: var(--text-color);
     min-width: 100px;
     min-height: 36px;
     padding: 6px 8px;
     border-radius: 4px;
+    border: 1px solid transparent;
     font-size: 1.6rem;
     font-weight: 700;
-    background-color: var(--white);
-    border: 1px solid transparent;
     cursor: pointer;
     user-select: none;
 
@@ -74,5 +75,7 @@
 
 // Icon
 .icon {
+    display: inline-block;
+    width: 20px;
     margin-right: 5px;
 }
