--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -12,6 +12,7 @@
 
     // DefaultLayout
     --default-layout-header-height: 60px;
+    --default-layout-horizontal-spacer: 24px;
     --width-content: 1150px;
 }
 
